# trashCAN

./: LICENSE  PYTHON_TRASHCAN_PLAN.md  README.md
.claude/: settings.local.json
pytrashcan/: README.md  __init__.py  __main__.py  pyproject.toml  run.py
pytrashcan/core/: __init__.py  broker.py  can_message.py  host.py  plugin_base.py
pytrashcan/gui/: __init__.py  app.py
pytrashcan/plugins/: __init__.py  injector.py  pcan_adapter.py  viewer.py
trashCAN/.svn/: wc.db
trashCAN/TRASH_CAN_CORE_SRC/: trashCAN.psess  trashCAN.sln
trashCAN/TRASH_CAN_CORE_SRC/CANMessageInjector/: CANMessageInjector.Designer.cs  CANMessageInjector.cs  CANMessageInjector.csproj  CANMessageInjector.resx
trashCAN/TRASH_CAN_CORE_SRC/CANMessageSniffer/: CANMessageSniffer.Designer.cs  CANMessageSniffer.cs  CANMessageSniffer.csproj  CANMessageSniffer.resx
trashCAN/TRASH_CAN_CORE_SRC/ItrashCANPlugin/: CAN.cs  ItrashCANPlugin.csproj
trashCAN/TRASH_CAN_CORE_SRC/PCAN-USB/: PCAN-USB.Designer.cs  PCAN-USB.cs  PCAN-USB.csproj  PCAN-USB.resx  PCANBasic_old.cs
trashCAN/TRASH_CAN_CORE_SRC/trashCAN/: About.Designer.cs  About.cs  About.resx  AssemblyInfo.cs  Help.Designer.cs  Help.cs  InstanceMonitor.cs  Program.cs  SysLog.cs  trashCAN.Designer.cs  trashCAN.cs  trashCAN.csproj  trashCAN.resx  trashCANHelp.txt
trashCAN/USER_PLUGIN_SRC/ElectrakDualCAN - Do Not Use/: ElecTrakDual.sln  ElectrakDual.csproj  PCAN-USB.Designer.cs  PCAN-USB.cs  PCANBasic_enu.chm
trashCAN/USER_PLUGIN_SRC/ElectrakHD/: ElectrakHD.Designer.cs  ElectrakHD.cs  ElectrakHD.csproj  ElectrakHD.resx  ElectrakHD.sln  J1939.cs  (+3 more)
(+45 files in other folders)
